Streamers endpoint works!

--- a/catjam/src/main/resources/application.properties
+++ b/catjam/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-twitch.api.url=https://api.twitch.tv/helix
-twitch.oauth.url=https://id.twitch.tv/oauth2
+logging.level.org.springframework.web.client.RestTemplate=DEBUG
+
+twitch.api.url=https://api.twitch.tv/helix/users
+twitch.oauth.url=https://id.twitch.tv/oauth2/token
 twitch.oauth.clientid.location=src/main/resources/twitch-oauth-clientID
 twitch.oauth.secret.location=src/main/resources/twitch-oauth-secret
